fix: adicionando gap

--- a/theme.css
+++ b/theme.css
@@ -52,6 +52,10 @@ body {
         flex-direction: column;
         align-items: start;
     }
+
+    @media screen and (miin-width: 768px) {
+        gap: 5rem;
+    }
 }
 
 a {
